force-app/main/default/objects/Tipo_nota_de_auditoria__c/Tipo_nota_de_auditoria__c.object-meta.xml
<CustomObject>
    <label>Tipo nota de Auditoria</label>
    <nameField>
        <label>Nombre de Tipo nota de auditoria</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tipos notas de Auditoria</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>