force-app/main/default/objects/Tipo_nota_de_auditoria__c/fields/Codigo_tipoNA__c.field-meta.xml
<CustomField>
    <fullName>Codigo_tipoNA__c</fullName>
    <externalId>true</externalId>
    <label>Codigo tipoNA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>