force-app/main/default/objects/Tipo_nota_de_auditoria__c/fields/TS_Nombre__c.field-meta.xml
<CustomField>
    <fullName>TS_Nombre__c</fullName>
    <label>TS Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>